--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chenzhikang/shenghuosdk",
+    "name": "shenghuo/shenghuosdk",
     "description": "圣火sdk",
     "license": "MIT",
     "authors": [
